refactor: 게임 메타데이터 조회 API 응답에 clubName 추가